--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     Made by Rohit Kagankar
   </footer>
 
-  <script src="./index.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
